# Server-Client

./: CMakeLists.txt  makefile
Server/Database/: Movies.json  Users.json
Server/src/main/java/bgu/spl181/net/api/bidi/: Connections.java
Server/src/main/java/bgu/spl181/net/impl/: BlockbusterInfo.java
Server/src/main/java/bgu/spl181/net/impl/BBreactor/: ReactorMain.java
Server/src/main/java/bgu/spl181/net/impl/BBtpc/: TPCMain.java
Server/src/main/java/bgu/spl181/net/impl/Blockbuster/: movieCollection.java  singleMovieInfo.java
Server/src/main/java/bgu/spl181/net/impl/Json/: JsonMovie.java  JsonUser.java
Server/src/main/java/bgu/spl181/net/impl/Users/: UserInfo.java  adminUserRequestSystem.java  (+1 more)
Server/src/main/java/bgu/spl181/net/srv/: BaseServer.java  BlockingConnectionHandler.java  EchoClient.java  NonBlockingConnectionHandler.java
Server/src/test/java/: Test.java
include/: Client.h  GlobalSignout.h  Task.h  TaskReadFromKeyBoard.h  TaskReadFromSocket.h  connectionHandler.h
spl-net/: example_Movies.json  example_Users.json
spl-net/Database/: example_Movies.json  example_Users.json
spl-net/src/main/java/bgu/spl181/net/impl/: BidiConnectionImpl.java  BlockbusterInfo.java  ConnectionImpl.java  JasonHandler.java  RequestSystem.java  UserInfo.java
spl-net/src/main/java/bgu/spl181/net/srv/: BaseServer.java  BlockingConnectionHandler.java  EchoClient.java  NonBlockingConnectionHandler.java  Reactor.java
spl-net/src/test/java/: Test.java
src/: Client.cpp  TaskReadFromKeyBoard.cpp  TaskReadFromSocket.cpp  connectionHandler.cpp  echoClient.cpp
(+24 files in other folders)
